--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,20 @@ jobs:
           node-version: 12.x
 
       - name: Restore project
-        run: npm ci
+        run: npm ci app
 
       - name: Build project
         run: npm run build
 
   publish-image:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Docker buildx
-        uses: docker/setup-buildx-action@3
+        uses: docker/setup-buildx-action@v3
 
       - name: Log into container registry
         uses: docker/login-action@v3
