ci: add directory changing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
+
+      - name: Change working directory
+        run: cd app
+        
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
 
       - name: Restore project
-        run: npm ci app
+        run: npm ci
 
       - name: Build project
         run: npm run build
