--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Change working directory
-        run: ClientApp/src/app
+        run: cd ClientApp/src/app
         
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
