--- a/ClientApp/nginx.conf
+++ b/ClientApp/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 0.0.0.0:80;
-  root /usr/share/nginx/html/client-app/browser;
+  root /usr/share/nginx/html;
   location / {
     try_files $uri $uri/ /index.html;
   }
