--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,16 +1,34 @@
 services:
   client:
     build: .
+    restart: on-failure
     ports:
-      - "4200:4200"
+      - "4200:80"
 
   api:
     image: ghcr.io/organizationmercury/mercury-api:develop
+    restart: on-failure
+    depends_on:
+      neo4j:
+        condition: service_healthy
     ports:
-      - "5088:5088"
+      - "8080:80"
+    environment:
+      NEO4J_URL: "neo4j://neo4j:7687"
+      NEO4J_USERNAME: $NEO4J_USERNAME
+      NEO4J_PASSWORD: $NEO4J_PASSWORD
   
   neo4j:
     image: neo4j:latest
+    restart: on-failure
+    healthcheck:
+      test: wget http://localhost:7474 || exit 1
+      interval: 3s
+      timeout: 10s
+      retries: 3
+      start_period: 3s
     ports:
       - "7474:7474"
       - "7687:7687"
+    environment:
+      NEO4J_AUTH: $NEO4J_USERNAME/$NEO4J_PASSWORD
