--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -14,7 +14,7 @@ services:
     ports:
       - "8080:80"
     environment:
-      NEO4J_URL: "neo4j://neo4j:7687"
+      NEO4J_URI: "neo4j://neo4j:7687"
       NEO4J_USERNAME: $NEO4J_USERNAME
       NEO4J_PASSWORD: $NEO4J_PASSWORD
   
