--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=neo4j_password
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres_password
+POSTGRES_DB=postgres_database
