feat(docker): update docket with minio

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ NEO4J_PASSWORD=neo4j_password
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres_password
 POSTGRES_DB=postgres_database
+
+MINIO_ROOT_USER=minio
+MINIO_ROOT_PASSWORD=minio_password
