--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      minio:
+        condition: service_healthy
     ports: 
       - "8080:8080"
     environment:
@@ -22,7 +24,29 @@ services:
       NEO4J_PASSWORD: $NEO4J_PASSWORD
       NEO4J_USERNAME: $NEO4J_USERNAME
       POSTGRES_CONNECTION_STRING: Host=postgres;Port=5432;Database=$POSTGRES_DB;Password=$POSTGRES_PASSWORD;User Id=$POSTGRES_USER
-  
+      MINIO_ROOT_USER: $MINIO_ROOT_USER
+      MINIO_ROOT_PASSWORD: $MINIO_ROOT_PASSWORD
+
+  minio:
+    container_name: front-minio
+    image: minio/minio
+    restart: on-failure
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 3s
+      timeout: 10s
+      retries: 3
+      start_period: 3s
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    environment:
+      MINIO_ROOT_USER: $MINIO_ROOT_USER
+      MINIO_ROOT_PASSWORD: $MINIO_ROOT_PASSWORD
+    command: server --console-address :9001 /data
+
   neo4j:
     container_name: front-neo4j
     image: neo4j:5.16-community
@@ -55,3 +79,6 @@ services:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
+
+volumes:
+  minio_data:
