--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@npmcli/package-json": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webpack-dev-middleware": "^7.0.0",
