chore(docker): add jwt environment

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ POSTGRES_DB=postgres_database
 
 MINIO_ROOT_USER=minio
 MINIO_ROOT_PASSWORD=minio_password
+
+JWT_ISSUER=mercury
+JWT_KEY=fc1a430e-6608-4cd4-9103-08eeccba2898
