chore: add signalR packages

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@microsoft/signalr": "^8.0.7",
+    "@microsoft/signalr-protocol-msgpack": "^8.0.7",
     "@npmcli/package-json": "^5.1.0",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
