--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
 
   api:
     container_name: front-api
-    image: ghcr.io/organizationmercury/mercury-api:develop
+    build: ../mercury-api
+    #image: ghcr.io/organizationmercury/mercury-api:develop
     restart: on-failure
     depends_on:
       neo4j:
