chore: exclude unnecessary folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "svg.preview.background": "editor",
     "cSpell.words": [
         "Signalr"
-    ]
+    ],
+    "files.exclude": {        
+        "**/node_modules": true,                           
+        "**/.angular": true,                           
+    }
 }
