--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles/styles.css",
+              "src/styles/variables.css"
             ],
             "scripts": []
           },
