--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
   api:
     container_name: front-api
     build: ../mercury-api
-    #image: ghcr.io/organizationmercury/mercury-api:develop
+    image: ghcr.io/organizationmercury/mercury-api:develop
     restart: on-failure
     depends_on:
       neo4j:
